--- a/index.html
+++ b/index.html
@@ -66,5 +66,10 @@
       };
       document.body.appendChild(script);
     </script>
+            <script>
+        if('serviceWorker' in navigator){
+            navigator.serviceWorker.register('./sw.js');
+        }
+     </script>
   </body>
 </html>
