--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         });
       };
       document.body.appendChild(script);
-    </script>
+    </script><script>
+        if('serviceWorker' in navigator){
+            navigator.serviceWorker.register('./sw.js');
+        }
+     </script>
   </body>
 </html>
